My local changes

--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 
 <head>
    <title>RxJs</title>
+   <style>
+   #circle {
+       width: 20px;
+       height: 20px;
+       border-radius: 50%;
+       background-color: red;
+       position: absolute;
+   }
+   </style>
 </head>
 <body>
-
-    <div>Hello</div>
+    <button id="button">Get Movies</button>
+    <div id="output"></div>
     <script src="app.js"></script>
 </body>
 </html>
